// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<UserGreeting @name="Ricardo" @greeting="Olá" />
{{@greeting}}, {{@name}}!

<div>
  <UserGreeting
    @aVeryLongArgumentNameThatIsStillGoing={{@alsoAVeryLongArgument}}
  />
</div>

<Form as |f|>
  <f.input @title="hello" />
  <f.input>hello</f.input>
</Form>

<this.label @title="hello" />

<button onclick={{action next}}>Next</button>

<button disabled class="disabled"></button>

<button disabled=disabled class="disabled"></button>

<img alt="" />

<div ...attributes>Hello</div>

=====================================output=====================================
<UserGreeting @name="Ricardo" @greeting="Olá" />
{{@greeting}}
,
{{@name}}
!
<div>
  <UserGreeting
    @aVeryLongArgumentNameThatIsStillGoing={{@alsoAVeryLongArgument}}
  />
</div>
<Form as |f|>
  <f.input @title="hello" />
  <f.input>
    hello
  </f.input>
</Form>
<this.label @title="hello" />
<button onclick={{action next}}>
  Next
</button>
<button disabled class="disabled"></button>
<button disabled="disabled" class="disabled"></button>
<img alt="" />
<div ...attributes>
  Hello
</div>
================================================================================
`;

exports[`component.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<UserGreeting @name="Ricardo" @greeting="Olá" />
{{@greeting}}, {{@name}}!

<div>
  <UserGreeting
    @aVeryLongArgumentNameThatIsStillGoing={{@alsoAVeryLongArgument}}
  />
</div>

<Form as |f|>
  <f.input @title="hello" />
  <f.input>hello</f.input>
</Form>

<this.label @title="hello" />

<button onclick={{action next}}>Next</button>

<button disabled class="disabled"></button>

<button disabled=disabled class="disabled"></button>

<img alt="" />

<div ...attributes>Hello</div>

=====================================output=====================================
<UserGreeting @name="Ricardo" @greeting="Olá" />
{{@greeting}}
,
{{@name}}
!
<div>
  <UserGreeting
    @aVeryLongArgumentNameThatIsStillGoing={{@alsoAVeryLongArgument}}
  />
</div>
<Form as |f|>
  <f.input @title="hello" />
  <f.input>
    hello
  </f.input>
</Form>
<this.label @title="hello" />
<button onclick={{action next}}>
  Next
</button>
<button disabled class="disabled"></button>
<button disabled="disabled" class="disabled"></button>
<img alt="" />
<div ...attributes>
  Hello
</div>
================================================================================
`;

exports[`curly.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Your username is @{{name}}</p>
<p>Hi {{firstName}} {{lastName}}</p>
=====================================output=====================================
<p>
  Your username is @{{name}}
</p>
<p>
  Hi {{firstName}} {{lastName}}
</p>
================================================================================
`;

exports[`curly.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p>Your username is @{{name}}</p>
<p>Hi {{firstName}} {{lastName}}</p>
=====================================output=====================================
<p>
  Your username is @{{name}}
</p>
<p>
  Hi {{firstName}} {{lastName}}
</p>
================================================================================
`;

exports[`element-modifier-statement.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div {{hello param param param param param param param param param param param param}}>
  Hello
</div>

<div {{hello hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

<div {{hello param param param param hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

=====================================output=====================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>
<div
  {{hello
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
  }}
>
  Hello
</div>
<div
  {{hello
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
<div
  {{hello
    param
    param
    param
    param
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
================================================================================
`;

exports[`element-modifier-statement.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div {{hello param param param param param param param param param param param param}}>
  Hello
</div>

<div {{hello hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

<div {{hello param param param param hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

=====================================output=====================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>
<div
  {{hello
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
  }}
>
  Hello
</div>
<div
  {{hello
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
<div
  {{hello
    param
    param
    param
    param
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
================================================================================
`;

exports[`literals.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{mustache true}}
{{mustache 5}}
{{mustache undefined}}
{{mustache null}}
<!-- hello world -->
{{! Mustache Comment}}
{{!-- Mustache Comment }} --}}

=====================================output=====================================
{{mustache true}}
{{mustache 5}}
{{mustache undefined}}
{{mustache null}}
<!-- hello world -->
{{! Mustache Comment}}
{{!-- Mustache Comment }} --}}
================================================================================
`;

exports[`literals.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
{{mustache true}}
{{mustache 5}}
{{mustache undefined}}
{{mustache null}}
<!-- hello world -->
{{! Mustache Comment}}
{{!-- Mustache Comment }} --}}

=====================================output=====================================
{{mustache true}}
{{mustache 5}}
{{mustache undefined}}
{{mustache null}}
<!-- hello world -->
{{! Mustache Comment}}
{{!-- Mustache Comment }} --}}
================================================================================
`;

exports[`string-literals.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{"abc"}}
{{'abc'}}
{{" \\" \\" ' more double quote than single quote "}}
{{' \\' \\' " more single quote than double quote '}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}

=====================================output=====================================
{{"abc"}}
{{"abc"}}
{{' " " \\' more double quote than single quote '}}
{{" ' ' \\" more single quote than double quote "}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}
================================================================================
`;

exports[`string-literals.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
{{"abc"}}
{{'abc'}}
{{" \\" \\" ' more double quote than single quote "}}
{{' \\' \\' " more single quote than double quote '}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}

=====================================output=====================================
{{'abc'}}
{{'abc'}}
{{' " " \\' more double quote than single quote '}}
{{" ' ' \\" more single quote than double quote "}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}
================================================================================
`;

exports[`sub-expressions.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div
  {{mustache
    (concat
      (service)
      (helper param hashPair=Value)
      (largeNameHelper param param param param hashPair=value hashPair=value hashPair=Value)
      hashPair=(helper param param param param param param hashPair=value hashPair=value hashPair=value)
      hashPair=(does not need a line break due to being under 80 chars long)
    )
  }}
></div>

{{#block
  (concat
    (service)
    (helper param hashPair=Value)
    (largeNameHelper param param param param hashPair=value hashPair=value hashPair=Value)
    hashPair=(helper param param param param param param hashPair=value hashPair=value hashPair=value)
    hashPair=(does not need a line break due to being under 80 chars long)
  )
}}

{{/block}}

{{foobar-sub-component/foobar-foo 
  hook="stringLiteral"
  foo=
    (t
      (concat "stringLiteral" (get blockParam "stringLiteral") hash=hash hash=hash)
      foo=(simple-helper (hash hashKey=blockParam.foo assignParam=blockParam.bar))
    )
}}

=====================================output=====================================
<div
  {{mustache
    (concat
      (service)
      (helper param hashPair=Value)
      (largeNameHelper
        param param param param hashPair=value hashPair=value hashPair=Value
      )
      hashPair=(helper
        param
        param
        param
        param
        param
        param
        hashPair=value
        hashPair=value
        hashPair=value
      )
      hashPair=(does not need a line break due to being under 80 chars long)
    )
  }}
></div>
{{#block
  (concat
    (service)
    (helper param hashPair=Value)
    (largeNameHelper
      param param param param hashPair=value hashPair=value hashPair=Value
    )
    hashPair=(helper
      param
      param
      param
      param
      param
      param
      hashPair=value
      hashPair=value
      hashPair=value
    )
    hashPair=(does not need a line break due to being under 80 chars long)
  )
}}{{/block}}
{{foobar-sub-component/foobar-foo
  hook="stringLiteral"
  foo=(t
    (concat
      "stringLiteral" (get blockParam "stringLiteral") hash=hash hash=hash
    )
    foo=(simple-helper (hash hashKey=blockParam.foo assignParam=blockParam.bar))
  )
}}
================================================================================
`;

exports[`sub-expressions.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div
  {{mustache
    (concat
      (service)
      (helper param hashPair=Value)
      (largeNameHelper param param param param hashPair=value hashPair=value hashPair=Value)
      hashPair=(helper param param param param param param hashPair=value hashPair=value hashPair=value)
      hashPair=(does not need a line break due to being under 80 chars long)
    )
  }}
></div>

{{#block
  (concat
    (service)
    (helper param hashPair=Value)
    (largeNameHelper param param param param hashPair=value hashPair=value hashPair=Value)
    hashPair=(helper param param param param param param hashPair=value hashPair=value hashPair=value)
    hashPair=(does not need a line break due to being under 80 chars long)
  )
}}

{{/block}}

{{foobar-sub-component/foobar-foo 
  hook="stringLiteral"
  foo=
    (t
      (concat "stringLiteral" (get blockParam "stringLiteral") hash=hash hash=hash)
      foo=(simple-helper (hash hashKey=blockParam.foo assignParam=blockParam.bar))
    )
}}

=====================================output=====================================
<div
  {{mustache
    (concat
      (service)
      (helper param hashPair=Value)
      (largeNameHelper
        param param param param hashPair=value hashPair=value hashPair=Value
      )
      hashPair=(helper
        param
        param
        param
        param
        param
        param
        hashPair=value
        hashPair=value
        hashPair=value
      )
      hashPair=(does not need a line break due to being under 80 chars long)
    )
  }}
></div>
{{#block
  (concat
    (service)
    (helper param hashPair=Value)
    (largeNameHelper
      param param param param hashPair=value hashPair=value hashPair=Value
    )
    hashPair=(helper
      param
      param
      param
      param
      param
      param
      hashPair=value
      hashPair=value
      hashPair=value
    )
    hashPair=(does not need a line break due to being under 80 chars long)
  )
}}{{/block}}
{{foobar-sub-component/foobar-foo
  hook='stringLiteral'
  foo=(t
    (concat
      'stringLiteral' (get blockParam 'stringLiteral') hash=hash hash=hash
    )
    foo=(simple-helper (hash hashKey=blockParam.foo assignParam=blockParam.bar))
  )
}}
================================================================================
`;
